@@ -1,1 +1,1 @@
-_NH3_Plasma_34s
+_NH3_Plasma_10s
